fix: Добовление z-index для popup__container

--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -9,6 +9,7 @@
     justify-content: center;
     top:6%;
     position: relative;
+    z-index: 5;
 }
 
 @media screen and (max-width : 620px){
